<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComicBookCatalogue</string>
           
    <string name="main_activity_menu_add_new">Add new</string>
    <string name="main_activity_menu_settings">Settings</string>
    
    <string name="add_new_activity_title">Add new</string>
    <string name="add_new_activity_menu_scan_barcode">Scan barcode</string>
    <string name="add_new_activity_cancel">CANCEL</string>
    <string name="add_new_activity_done">DONE</string>
    <string name="add_new_activity_book_title">Title</string>
    <string name="add_new_activity_book_issue">Issue</string>
    <string name="add_new_activity_book_series">Series</string>
    <string name="add_new_activity_book_publisher">Publisher</string>
    
</resources>