<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/add_new_activity_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="beginning" >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/add_new_activity_cancel_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_menu_cancel_holo_light"
                android:text="@string/add_new_activity_cancel" >
            </Button>

            <Button
                android:id="@+id/add_new_activity_done_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_done"
                android:text="@string/add_new_activity_done" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/add_new_activity_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_new_activity_buttons_layout" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_new_activity_book_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_activity_book_title" />

            <EditText
                android:id="@+id/add_new_activity_book_title_ev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_new_activity_book_issue_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_activity_book_issue" />

            <EditText
                android:id="@+id/add_new_activity_book_issue_ev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_new_activity_book_series_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_activity_book_series" />

            <EditText
                android:id="@+id/add_new_activity_book_series_ev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_new_activity_book_publisher_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_activity_book_publisher" />

            <EditText
                android:id="@+id/add_new_activity_book_publisher_ev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>